# c-_back_end

./: .gitignore  CMakeLists.txt  LICENSE  README-任务功能测试.md  README.md  README_SMS.md  _preview.ps1  app.js  app.json  app.wxss  deploy-cloudfunctions.md  deploy-permission-functions.bat  perf.data  perf.data.old  privacy.json  project.config.json  sample.txt  test-exclusive-task.md  touch  云函数部署指南.md  任务功能完整验证报告.md  任务功能开发完成总结.md  任务接取功能测试指南.md  任务申请和时间线功能实现总结.md  功能验证清单.md  启动开发工具.bat  数据库配置检查指南.md  权限系统使用说明.md  测试指南.md  登录状态修复总结.md
app/: CMakeLists.txt  buggy_mem.cpp  demo_buffer.cpp  demo_perf.cpp  demo_raii.cpp  fixed_mem.cpp
cloudfunctions/aiChat/: index.js  package.json
cloudfunctions/initAdmin/: index.js  package-lock.json  package.json
cloudfunctions/initDatabase/: index.js  package-lock.json  package.json
cloudfunctions/login/: index.js  package-lock.json  package.json
cloudfunctions/permission/: index.js  package-lock.json  package.json
cloudfunctions/sms/: index.js  package-lock.json  package.json
cloudfunctions/task/: index.js  package-lock.json  package.json
custom-tab-bar/: index.js  index.wxml  index.wxss
data/: articles.js
day5/: CMakeLists.txt
day5/include/: mem_issues.hpp
day5/logs/: day5_memcheck.md
day5/src/: main.cpp  mem_issues_bad.cpp  mem_issues_fix.cpp
day5/tests/: test_basic.cpp
docs/: database-setup.md  day5.md  day6_perf.md  perf_tips.md  task-data-structure.md
include/: buffer.h  file_guard.h  memory_issues.hpp  mutex_guard.h  node.h
include/mycore/: buffer.hpp  file_guard.hpp  hotspots.hpp  line_reader.hpp
logs/: day5_valgrind_log.md
pages/article/: detail.js  detail.wxml  detail.wxss
pages/chat/: add.js  add.wxml  add.wxss  chat.js  chat.wxml  chat.wxss  detail.js  detail.wxml  detail.wxss
pages/debug/: debug.js  debug.wxml  debug.wxss  login-test.js  login-test.wxml  login-test.wxss
pages/demand/: create.js  create.wxml  create.wxss  detail.js  detail.wxml  detail.wxss
pages/index/: index.js  index.wxml  index.wxss
pages/jysjt/: index.js  index.json  index.wxml  index.wxss
pages/mine/: auth.js  auth.json  auth.wxml  auth.wxss  faq.js  faq.json  faq.wxml  faq.wxss  mine.js  mine.wxml  mine.wxss  wechat-login.js  wechat-login.json  wechat-login.wxml  wechat-login.wxss
pages/njb/: index.js  index.json  index.wxss
pages/permission-management/: permission-management.js  permission-management.json  permission-management.wxml  permission-management.wxss
pages/qxt/: index.js  index.json  index.wxss
pages/report/: report.js  report.json  report.wxml  report.wxss
pages/service/: human.js  human.json  human.wxml  human.wxss  index.js  index.wxml  index.wxss  robot.js  robot.json  robot.wxml  robot.wxss
pages/task/: applications.js  applications.json  applications.wxml  applications.wxss  detail.js  detail.json  detail.wxml  detail.wxss  list.js  list.json  list.wxml  list.wxss  timeline.js  timeline.json  timeline.wxml  timeline.wxss
pages/test-database/: test-database.js  test-database.json  test-database.wxml  test-database.wxss
pages/test-db-status/: test-db-status.js  test-db-status.json  test-db-status.wxml  test-db-status.wxss
pages/test-init-db/: test-init-db.js  test-init-db.json  test-init-db.wxml  test-init-db.wxss
pages/test-message/: test-message.js  test-message.wxml  test-message.wxss
pages/test-permission/: test-permission.js  test-permission.json  test-permission.wxml  test-permission.wxss
pages/test-subscribe/: test-subscribe.js  test-subscribe.json  test-subscribe.wxml  test-subscribe.wxss
pages/test-task/: test-task.js  test-task.json  test-task.wxml  test-task.wxss
pages/test-task-flow/: test-task-flow.js  test-task-flow.json  test-task-flow.wxml  test-task-flow.wxss
pages/webview/: index.js  index.json
src/: CMakeLists.txt  buggy.cpp  buggy.hpp  file_guard.cpp  hotspots.cpp  line_reader.cpp  memory_issues.cpp  mutex_guard.cpp
tests/: CMakeLists.txt  test_assert.hpp  test_line_reader.cpp  test_min.cpp
utils/: cloudHelper.js  subscribe.js  userState.js
week1_day7/: CMakeLists.txt
week1_day7/app/: CMakeLists.txt  demo_ownership.cpp  demo_perf.cpp
week1_day7/docs/: BUILD.md  README.md  gdb_debug.md  perf_report.txt  valgrind_memcheck.md  week1_report.md
week1_day7/src/: CMakeLists.txt  buffer.cpp  node.cpp
week1_day7/tests/: CMakeLists.txt  test.cpp
week2/: CMakeLists.txt
week2/app/: CMakeLists.txt  demo_concurrency.cpp
week2/docs/: WEEK2_PLAN.md
week2/include/: bounded_queue.h
week2/src/: CMakeLists.txt  bounded_queue.cpp
week2/tests/: CMakeLists.txt  test_bounded_queue.cpp
week3/: CMakeLists.txt  README.md
week3/app/: CMakeLists.txt  demo_week3.cpp
week3/docs/: CONCURRENCY.md
week3/include/: bounded_queue.h
week3/logs/: tsan.txt
week3/src/: CMakeLists.txt  bounded_queue.cpp
week3/tests/: CMakeLists.txt  test_week3.cpp
